...
					}}
					style={globalStyles.modalContainer.global}
					contentContainerStyle={[
						globalStyles.modalContentContainer.global,
						{ backgroundColor: theme.colors.primaryContainer },
					]}
					testID='ProfilePictureModal'
				>
					<Button
						style={globalStyles.button.global}
						contentStyle={globalStyles.buttonContent.global}
						labelStyle={globalStyles.buttonText.global}
						icon='file-image'
						mode='elevated'
						onPress={pickImage}
						testID='GalleryButton'
					>
						{t('button.gallery')}
					</Button>
					<Button
						style={globalStyles.button.global}
						contentStyle={globalStyles.buttonContent.global}
						labelStyle={globalStyles.buttonText.global}
						icon='camera'
						mode='elevated'
						onPress={takePicture}
						testID='CameraButton'
					>
						{t('button.camera')}
					</Button>
				</Modal>
			</Portal>

...
				onConfirm={onYearReceived}
				testID='EndDatePicker'
			/>

			<View
				style={globalStyles.container.global}
				testID='ProfilePage'
			>
				{loading || !profile ? (
					<ActivityIndicator
						size={75}
						color={theme.colors.primary}
						style={{ margin: 28 }}
...
								<Pressable
									disabled={!editing}
									style={globalStyles.pictureButton}
									onPress={() => {
										setPictureModal(true);
									}}
									testID='ProfilePicturePressable'
								>
									<Avatar.Image
										size={200}
										style={{ alignSelf: 'center' }}
										source={{
											uri: profilePicture
...
											onValueChange={(input) => {
												setAutoNumber(input);
												setMemberNumberError(false);
												if (input) assignMemberNumber();
												else setMemberNumber(profile.memberNumber.toString());
											}}
											testID='AutoNumberSwitch'
										/>
									</View>
									<View style={{ flex: 1, flexDirection: 'column' }}>
										<TextInput
											disabled={Boolean(!editing || (editing && autoNumber))}
											style={[globalStyles.input, { flex: 3 }]}
...
											}}
											maxLength={6}
											error={memberNumberError}
											autoCapitalize='none'
											keyboardType='numeric'
											label={t('member.memberNumber')}
											testID='MemberNumberInput'
										/>
										{memberNumberError ? (
											<HelperText
												type='error'
												visible={memberNumberError}
												style={globalStyles.text.errorHelper}
												testID='MemberNumberError'
											>
												{t('addMember.memberNumberError')}
											</HelperText>
										) : null}
									</View>
								</View>
...
										setName(name.trim());
									}}
									error={nameError}
									autoCapitalize='words'
									keyboardType='default'
									label={t('member.name')}
									testID='NameInput'
								/>
								{nameError ? (
									<HelperText
										type='error'
										visible={nameError}
										style={globalStyles.text.errorHelper}
...
										setEmail(email.trim());
									}}
									error={emailError}
									autoCapitalize='none'
									keyboardType='email-address'
									label={t('member.email')}
									testID='EmailInput'
								/>
								{emailError ? (
									<HelperText
										type='error'
										visible={emailError}
										style={globalStyles.text.errorHelper}
...
										setPhoneNumber(phoneNumber.trim());
									}}
									autoCapitalize='none'
									inputMode='tel'
									keyboardType='phone-pad'
									label={t('member.phoneNumber')}
									testID='PhoneInput'
								/>
								<TextInput
									disabled={!editing}
									style={globalStyles.input}
									value={
										occupation || editing ? occupation : profile.occupation
...
										setOccupation(occupation.trim());
									}}
									autoCapitalize='sentences'
									inputMode='text'
									keyboardType='default'
									label={t('member.occupation')}
									testID='OccupationInput'
								/>
								<TextInput
									disabled={!editing}
									style={globalStyles.input}
									value={country || editing ? country : profile.country}
									onChangeText={setCountry}
...
										setCountry(country.trim());
									}}
									autoCapitalize='sentences'
									inputMode='text'
									keyboardType='default'
									label={t('member.country')}
									testID='CountryInput'
								/>
								<TextInput
									disabled={!editing}
									style={globalStyles.input}
									value={address || editing ? address : profile.address}
									onChangeText={setAddress}
...
										setAddress(address.trim());
									}}
									autoCapitalize='sentences'
									inputMode='text'
									keyboardType='default'
									label={t('member.address')}
									testID='AddressInput'
								/>
								<TextInput
									disabled={!editing}
									style={globalStyles.input}
									value={zipCode || editing ? zipCode : profile.zipCode}
									onChangeText={(input) => {
...
									}}
									maxLength={8}
									autoCapitalize='none'
									inputMode='numeric'
									keyboardType='number-pad'
									label={t('member.zipCode')}
									testID='ZipCodeInput'
								/>
								{zipCodeError ? (
									<HelperText
										type='error'
										visible={zipCodeError}
										style={globalStyles.text.errorHelper}
										testID='ZipCodeError'
									>
										{t('member.zipCodeError')}
									</HelperText>
								) : null}

								<>
									<Button
										disabled={!editing}
										style={{ marginVertical: 5 }}
										labelStyle={globalStyles.text.date}
										onPress={() => setBirthDateModal(true)}
										testID='BirthDateButton'
									>
										{`${t('member.birthDate')}: ${
											birthDate.toLocaleDateString('pt-pt') !==
											new Date().toLocaleDateString('pt-pt')
												? birthDate.toLocaleDateString('pt-pt')
												: new Date(
...
											},
										]}
										status={paid ? 'checked' : 'unchecked'}
										onPress={() => {
											setPaid(!paid);
										}}
										testID='PaidCheckbox'
									/>
									{paid ? (
										<>
											<Button
												disabled={!editing}
												labelStyle={globalStyles.text.date}
...
									contentStyle={globalStyles.buttonContent.global}
									labelStyle={globalStyles.buttonText.global}
									icon='content-save'
									mode='elevated'
									loading={loadingSave}
									onPress={saveMember}
									testID='SaveButton'
								>
									{t('button.saveMember')}
								</Button>
							) : (
								<>
									<Button
...
													? new Date(profile.paidDate.toDate())
													: new Date()
											);
											setEndDate(profile.endDate || new Date().getFullYear());
											setProfilePicture('');
										}}
										testID='EditButton'
									>
										{t('button.editMember')}
									</Button>
									<Button
										style={globalStyles.button.profile}
										contentStyle={globalStyles.buttonContent.global}
...
										onPress={() => {
											showDialog({
												text: t('dialog.deleteConfirmation'),
												onConfirmation: () => {
													deleteMember();
												},
												testID: 'DeleteConfirmationDialog',
											});
										}}
										testID='DeleteButton'
									>
										{t('button.deleteMember')}
									</Button>
								</>
							)}
						</View>
...
