...
					</Dialog.Content>
				</Dialog>
			</Portal>

			<View
				style={globalStyles.container.home}
				testID='HomePage'
			>
				<View style={globalStyles.container.image}>
					<Image
						style={globalStyles.image.global}
						source={require('@/assets/images/logoReact.png')}
						testID='HomeLogo'
...
						contentStyle={globalStyles.buttonContent.global}
						labelStyle={globalStyles.buttonText.global}
						icon='account-search'
						mode='elevated'
						//loading={loginLoading}
						onPress={() => router.push('/searchMember')}
						testID='SearchButton'
					>
						{t('button.searchMember')}
					</Button>
					<Button
						style={globalStyles.button.global}
						contentStyle={globalStyles.buttonContent.global}
...
