...
							globalStyles.item,
							{ backgroundColor: theme.colors.primary },
						]}
						onPress={() => {
							goToProfile(item.key);
						}}
						testID='ItemButton'
					>
						<View>
							<Avatar.Image
								size={100}
								style={{ alignSelf: 'center', marginBottom: 10 }}
								source={{
...
					</Dialog.Content>
				</Dialog>
			</Portal>

			<View
				style={globalStyles.container.global}
				testID='SearchPage'
			>
				<SearchList
					style={globalStyles.searchBar}
					icon='account'
					value={name}
					placeholder={t('member.name')}
...
