...
					}}
					style={globalStyles.modalContainer.global}
					contentContainerStyle={[
						globalStyles.modalContentContainer.global,
						{ backgroundColor: theme.colors.primaryContainer },
					]}
					testID='ProfilePictureModal'
				>
					<Button
						style={globalStyles.button.global}
						contentStyle={globalStyles.buttonContent.global}
						labelStyle={globalStyles.buttonText.global}
						icon='file-image'
						mode='elevated'
						onPress={pickImage}
						testID='GalleryButton'
					>
						{t('button.gallery')}
					</Button>
					<Button
						style={globalStyles.button.global}
						contentStyle={globalStyles.buttonContent.global}
						labelStyle={globalStyles.buttonText.global}
						icon='camera'
						mode='elevated'
						onPress={takePicture}
						testID='CameraButton'
					>
						{t('button.camera')}
					</Button>
				</Modal>
			</Portal>

			<YearPicker
				visible={endDateModal}
				onDismiss={() => {
					setEndDateModal(false);
				}}
				onConfirm={onYearReceived}
				testID='EndDatePicker'
			/>

			<View
				style={globalStyles.container.global}
				testID='AddPage'
			>
				<ScrollView>
					<KeyboardAvoidingView style={{ paddingHorizontal: 10 }}>
						<Pressable
							style={globalStyles.pictureButton}
							onPress={() => {
								setPictureModal(true);
							}}
							testID='ProfilePicturePressable'
						>
							<Avatar.Image
								size={200}
								style={{ alignSelf: 'center' }}
								source={{ uri: profilePicture }}
							/>
...
									value={autoNumber}
									onValueChange={(input) => {
										setAutoNumber(input);
										setMemberNumberError(false);
										if (input) assignMemberNumber();
									}}
									testID='AutoNumberSwitch'
								/>
							</View>

							<View style={{ flex: 1, flexDirection: 'column' }}>
								<TextInput
									disabled={autoNumber}
...
									}}
									maxLength={6}
									error={memberNumberError}
									autoCapitalize='none'
									keyboardType='numeric'
									label={t('member.memberNumber')}
									testID='MemberNumberInput'
								/>
								{memberNumberError ? (
									<HelperText
										type='error'
										visible={memberNumberError}
										style={globalStyles.text.errorHelper}
										testID='MemberNumberError'
									>
										{t('member.memberNumberError')}
									</HelperText>
								) : null}
							</View>
						</View>
...
								setName(name.trim());
							}}
							error={nameError}
							autoCapitalize='words'
							keyboardType='default'
							label={t('member.name')}
							testID='NameInput'
						/>
						{nameError ? (
							<HelperText
								type='error'
								visible={nameError}
								style={globalStyles.text.errorHelper}
								testID='NameError'
							>
								{t('member.nameError')}
							</HelperText>
						) : null}

						<TextInput
...
								setEmail(email.trim());
							}}
							error={emailError}
							autoCapitalize='none'
							keyboardType='email-address'
							label={t('member.email')}
							testID='EmailInput'
						/>
						{emailError ? (
							<HelperText
								type='error'
								visible={emailError}
								style={globalStyles.text.errorHelper}
								testID='EmailError'
							>
								{t('member.emailError')}
							</HelperText>
						) : null}

						<TextInput
...
								setPhoneNumber(phoneNumber.trim());
							}}
							autoCapitalize='none'
							inputMode='tel'
							keyboardType='phone-pad'
							label={t('member.phoneNumber')}
							testID='PhoneInput'
						/>
						<TextInput
							style={globalStyles.input}
							value={occupation}
							onChangeText={setOccupation}
							onEndEditing={() => {
								setOccupation(occupation.trim());
							}}
							autoCapitalize='sentences'
							inputMode='text'
							keyboardType='default'
							label={t('member.occupation')}
							testID='OccupationInput'
						/>
						<TextInput
							style={globalStyles.input}
							value={country}
							onChangeText={setCountry}
							onEndEditing={() => {
								setCountry(country.trim());
							}}
							autoCapitalize='sentences'
							inputMode='text'
							keyboardType='default'
							label={t('member.country')}
							testID='CountryInput'
						/>
						<TextInput
							style={globalStyles.input}
							value={address}
							onChangeText={setAddress}
							onEndEditing={() => {
								setAddress(address.trim());
							}}
							autoCapitalize='sentences'
							inputMode='text'
							keyboardType='default'
							label={t('member.address')}
							testID='AddressInput'
						/>
						<TextInput
							style={globalStyles.input}
							value={zipCode}
							onChangeText={(input) => {
								setZipCode(input.replace(/[^0-9\-]/g, ''));
...
							error={zipCodeError}
							maxLength={8}
							autoCapitalize='none'
							inputMode='numeric'
							keyboardType='number-pad'
							label={t('member.zipCode')}
							testID='ZipCodeInput'
						/>
						{zipCodeError ? (
							<HelperText
								type='error'
								visible={zipCodeError}
								style={globalStyles.text.errorHelper}
								testID='ZipCodeError'
							>
								{t('member.zipCodeError')}
							</HelperText>
						) : null}

						<>
							<Button
								style={{ marginVertical: 5 }}
								labelStyle={globalStyles.text.date}
								onPress={() => setBirthDateModal(true)}
								testID='BirthDateButton'
							>
								{`${t('member.birthDate')}: ${birthDate.toLocaleDateString(
									'pt-pt'
								)}`}
							</Button>
							<DatePicker
...
									{ color: theme.colors.primary },
								]}
								status={paid ? 'checked' : 'unchecked'}
								onPress={() => {
									setPaid(!paid);
								}}
								testID='PaidCheckbox'
							/>
							{paid ? (
								<>
									<Button
										labelStyle={globalStyles.text.date}
										onPress={() => setPaidDateModal(true)}
										testID='PaidDateButton'
									>
										{`${t('member.on')} ${paidDate.toLocaleDateString(
											'pt-pt'
										)}`}
									</Button>
									<DatePicker
...
										testID='PaidDatePicker'
									/>
									<View style={{ flexDirection: 'column' }}>
										<Button
											labelStyle={globalStyles.text.date}
											onPress={() => setEndDateModal(true)}
											testID='EndDateButton'
										>
											{`${t('member.until')} ${endDate}`}
										</Button>
									</View>
								</>
							) : null}
...
						contentStyle={globalStyles.buttonContent.global}
						labelStyle={globalStyles.buttonText.global}
						icon='account-plus'
						mode='elevated'
						loading={loading}
						onPress={addMember}
						testID='AddButton'
					>
						{t('button.addMember')}
					</Button>
				</View>
			</View>
		</>
...
