appId: com.leandropata.membermanagementapp
---
- assertVisible:
    id: 'HomePage'
- tapOn:
    id: 'SearchButton'
    retryTapIfNoChange: false
- assertVisible:
    id: 'SearchPage'
- assertVisible:
    id: 'ItemButton'
- tapOn:
    id: 'ItemButton'
    retryTapIfNoChange: false

- assertVisible:
    id: 'ProfilePage'
- assertVisible:
    id: 'ProfilePicturePressable'
    enabled: false
- assertVisible:
    id: 'AutoNumberSwitch'
    enabled: false
    checked: false
- assertVisible:
    id: 'MemberNumberInput'
    enabled: false
- assertVisible:
    id: 'NameInput'
    enabled: false
- assertVisible:
    id: 'EmailInput'
    enabled: false
- assertVisible:
    id: 'PhoneInput'
    enabled: false
- scrollUntilVisible:
    element:
      id: 'PaidCheckbox'
    direction: DOWN
- assertVisible:
    id: 'OccupationInput'
    enabled: false
- assertVisible:
    id: 'CountryInput'
    enabled: false
- assertVisible:
    id: 'AddressInput'
    enabled: false
- assertVisible:
    id: 'ZipCodeInput'
    enabled: false
- assertVisible:
    id: 'BirthDateButton'
    enabled: false
- assertVisible:
    id: 'PaidCheckbox'
    enabled: false
- assertVisible:
    id: 'EditButton'
- assertVisible:
    id: 'DeleteButton'

- scrollUntilVisible:
    element:
      id: 'ProfilePicturePressable'
    direction: UP

- tapOn:
    id: 'EditButton'
    retryTapIfNoChange: false
- assertVisible:
    id: 'ProfilePicturePressable'
    enabled: true
- assertVisible:
    id: 'AutoNumberSwitch'
    enabled: true
    checked: false
- assertVisible:
    id: 'MemberNumberInput'
    enabled: true
- assertVisible:
    id: 'NameInput'
    enabled: true
- assertVisible:
    id: 'EmailInput'
    enabled: true
- assertVisible:
    id: 'PhoneInput'
    enabled: true
- scrollUntilVisible:
    element:
      id: 'PaidCheckbox'
    direction: DOWN
- assertVisible:
    id: 'OccupationInput'
    enabled: true
- assertVisible:
    id: 'CountryInput'
    enabled: true
- assertVisible:
    id: 'AddressInput'
    enabled: true
- assertVisible:
    id: 'ZipCodeInput'
    enabled: true
- assertVisible:
    id: 'BirthDateButton'
    enabled: true
- assertVisible:
    id: 'PaidCheckbox'
    enabled: true
- assertVisible:
    id: 'SaveButton'

- scrollUntilVisible:
    element:
      id: 'ProfilePicturePressable'
    direction: UP

- tapOn:
    id: 'ProfilePicturePressable'
    retryTapIfNoChange: false
- assertVisible:
    id: 'ProfilePictureModal'
- assertVisible:
    id: 'GalleryButton'
- assertVisible:
    id: 'CameraButton'
- back
- assertNotVisible:
    id: 'ProfilePictureModal'

- assertVisible:
    id: 'AutoNumberSwitch'
    checked: false
- assertVisible:
    id: 'MemberNumberInput'
    enabled: true
- tapOn:
    id: 'AutoNumberSwitch'
    retryTapIfNoChange: false
- assertVisible:
    id: 'AutoNumberSwitch'
    checked: true
- assertVisible:
    id: 'MemberNumberInput'
    enabled: false
- tapOn:
    id: 'AutoNumberSwitch'
    retryTapIfNoChange: false
- assertVisible:
    id: 'AutoNumberSwitch'
    checked: false
- assertVisible:
    id: 'MemberNumberInput'
    enabled: true
- tapOn:
    id: 'MemberNumberInput'
    retryTapIfNoChange: false
- eraseText
- hideKeyboard
- tapOn:
    id: 'NameInput'
    retryTapIfNoChange: false
- assertVisible:
    id: 'MemberNumberError'

- tapOn:
    id: 'MemberNumberInput'
    retryTapIfNoChange: false
- inputRandomPersonName
- inputText: '6969'
- assertVisible:
    id: 'MemberNumberInput'
    text: '6969'
- hideKeyboard
- tapOn:
    id: 'NameInput'
    retryTapIfNoChange: false
- hideKeyboard
- assertNotVisible:
    id: 'MemberNumberError'
- back

- assertVisible:
    id: 'EditButton'
- tapOn:
    id: 'EditButton'
    retryTapIfNoChange: false
- assertVisible:
    id: 'SaveButton'

- tapOn:
    id: 'PhoneInput'
    retryTapIfNoChange: false
- eraseText
- inputRandomPersonName
- inputText: '987654321'
- assertVisible:
    id: 'PhoneInput'
    text: '987654321'
- hideKeyboard
- back

- assertVisible:
    id: 'EditButton'
- tapOn:
    id: 'EditButton'
    retryTapIfNoChange: false
- assertVisible:
    id: 'SaveButton'

- scrollUntilVisible:
    element:
      id: 'ZipCodeInput'
    direction: DOWN
- tapOn:
    id: 'ZipCodeInput'
    retryTapIfNoChange: false
- eraseText
- inputRandomPersonName
- inputText: '123'
- assertVisible:
    id: 'ZipCodeInput'
    text: '123'
- hideKeyboard
- tapOn:
    id: 'AddressInput'
    retryTapIfNoChange: false
- hideKeyboard
- assertVisible:
    id: 'ZipCodeError'

- tapOn:
    id: 'ZipCodeInput'
    retryTapIfNoChange: false
- eraseText
- inputRandomNumber:
    length: 7
- hideKeyboard
- tapOn:
    id: 'AddressInput'
    retryTapIfNoChange: false
- hideKeyboard
- assertNotVisible:
    id: 'ZipCodeError'

- back
- assertVisible:
    id: 'EditButton'

- tapOn:
    id: 'DeleteButton'
    retryTapIfNoChange: false
- assertVisible: 'DeleteConfirmationDialog'
- assertVisible: 'DialogConfirmation'
- assertVisible: 'DialogDismiss'

- tapOn:
    id: 'DialogDismiss'
    retryTapIfNoChange: false
- assertNotVisible: 'DeleteConfirmationDialog'

- back
- assertVisible:
    id: 'SearchPage'

- back
- assertVisible:
    id: 'HomePage'
